--- a/index.html
+++ b/index.html
@@ -14,78 +14,103 @@
 </head>
 <body>
   <div id="app">
-		<section class="blue-box">
-			<!-- 通用导航 -->
-			<header class="flex">
-				<aside class="logo flex">
-					<span class="logo-img"><img src="imgs/sjs-logo.webp" alt="设计师工作日常"></span>
-					<span class="logo-name">设计师工作日常</span>
-				</aside>
-				<nav>
-					<a class="nav-a" href="index.html">首页</a>
-					<a class="nav-a" href="design.html">设计</a>
-					<a class="nav-a" href="dev.html">前端</a>
-					<a class="nav-a" href="test.html">实验</a>
-					<a class="nav-a" href="about.html">关于</a>
-				</nav>
-			</header>
-			<main class="index-box">
-				<div class="cursor27">
-					<span class="ani-box27">
-					</span>
+		<!-- 通用导航 -->
+		<header class="flex">
+			<aside class="logo flex">
+				<span class="logo-img"><img src="imgs/sjs-logo.webp" alt="设计师工作日常"></span>
+				<span class="logo-name">设计师工作日常</span>
+			</aside>
+			<nav>
+				<a class="nav-a" href="index.html">设计</a>
+				<a class="nav-a" href="dev.html">前端</a>
+				<a class="nav-a" href="test.html">实验</a>
+			</nav>
+		</header>
+		<section class="blue-box" style="padding-bottom: 6.25rem">
+			<div class="test-banner flex">
+				<div class="banner-left-box flex">
+					<div class="design-animation-01"></div>
+					<div class="design-animation-02" style="margin: 0 2rem;"></div>
+					<div class="design-animation-03"></div>
 				</div>
-				<div class="index-content">
-					<div class="index-page flex">
-						<div class="person-img"></div>
-						<div class="index-text-box">
-							<p class="index-title">Welcome!</p>
-							<p class="index-info">我是 Just. Liu，这里是设计师工作日常，欢迎您的光临！</p>
-						</div>
-					</div>
-					<div class="index-page flex">
-						<div class="person-img"></div>
-						<div class="index-text-box">
-							<p class="index-title">UX/UI。</p>
-							<p class="index-info">好的设计不仅关注功能性，还要为用户提供愉悦舒适的使用体验。</p>
-						</div>
-					</div>
-					<div class="index-page flex">
-						<div class="person-img"></div>
-						<div class="index-text-box">
-							<p class="index-title">平面/品牌VI。</p>
-							<p class="index-info">传播赋予产品生命的魅力外衣。</p>
-						</div>
-					</div>
-					<div class="index-page flex">
-						<div class="person-img"></div>
-						<div class="index-text-box">
-							<p class="index-title">WEB前端。</p>
-							<p class="index-info">熟悉前端代码，可以更好的帮助设计产品，实现落地。</p>
-						</div>
-					</div>
+				<div class="test-title flex">
+					<ul class="flex">
+						<li class="test-title-name">设计</li>
+						<li class="test-title-info">书痴者文必工，艺痴者技必良。</li>
+					</ul>
 				</div>
-			</main>
-			<footer class="footer flex">
-				<div class="about-info">
-					<a href="https://huaban.com/user/liujueyi" target="_blank">花瓣</a>
-					<a href="https://blog.csdn.net/justliu1989" target="_blank">CSDN</a>
-					<a href="https://t.me/designer_work_share" target="_blank">电报频道</a>
-					<a href="https://weibo.com/u/1849041452" target="_blank">微博</a>
-					<a href="javascript:;" class="footer-gzh">公众号
-					<aside class="gzh-pop">
-						<img class="gzhimg" src="https://funcss.liujueyi.cn/img/wxgzh.png" alt="微信公众号">
-						<p class="gzhtext">微信公众号</p>
-					</aside>
-					</a>
-				</div>
-				<div class="site-beian">
-					<span>设计师工作日常 © 2019</span>
-					<a href="https://beian.miit.gov.cn" target="_blank">冀ICP备19017590号-1</a>
-				</div>
-			</footer>
+			</div>
 		</section>
+		<section class="red-box" style="padding-bottom: 6.25rem">
+			<div class="web-pro-title flex">
+				<ul class="flex">
+					<li class="test-title-name">更好的用户体验。</li>
+					<li class="test-title-info">春有百花秋望月，夏有凉风冬听雪。</li>
+				</ul>
+			</div>
+			<div class="item-list flex">
+				<a class="design-item flex" href="https://whtool.liujueyi.cn/" target="_blank">
+					<li class="design-img-li"><img src="imgs/19.webp" alt="呼叫中心CRM解决方案" /></li>
+					<li class="dev-item-name">呼叫中心CRM解决方案</li>
+					<li class="item-bottom-info flex">
+						<span># UI - App</span>
+						<span><i class="i-dot"></i> 2023-3-17</span>
+					</li>
+				</a>
+				<a class="design-item flex" href="https://whtool.liujueyi.cn/" target="_blank">
+					<li class="design-img-li"><img src="imgs/19.webp" alt="呼叫中心CRM解决方案" /></li>
+					<li class="dev-item-name">呼叫中心CRM解决方案</li>
+					<li class="item-bottom-info flex">
+						<span># UI - App</span>
+						<span><i class="i-dot"></i> 2023-3-17</span>
+					</li>
+				</a>
+				<a class="design-item flex" href="https://whtool.liujueyi.cn/" target="_blank">
+					<li class="design-img-li"><img src="imgs/19.webp" alt="呼叫中心CRM解决方案" /></li>
+					<li class="dev-item-name">呼叫中心CRM解决方案</li>
+					<li class="item-bottom-info flex">
+						<span># UI - App</span>
+						<span><i class="i-dot"></i> 2023-3-17</span>
+					</li>
+				</a>
+				<a class="design-item flex" href="https://whtool.liujueyi.cn/" target="_blank">
+					<li class="design-img-li"><img src="imgs/19.webp" alt="呼叫中心CRM解决方案" /></li>
+					<li class="dev-item-name">呼叫中心CRM解决方案</li>
+					<li class="item-bottom-info flex">
+						<span># UI - App</span>
+						<span><i class="i-dot"></i> 2023-3-17</span>
+					</li>
+				</a>
+				<a class="design-item flex" href="https://whtool.liujueyi.cn/" target="_blank">
+					<li class="design-img-li"><img src="imgs/19.webp" alt="呼叫中心CRM解决方案" /></li>
+					<li class="dev-item-name">呼叫中心CRM解决方案</li>
+					<li class="item-bottom-info flex">
+						<span># UI - App</span>
+						<span><i class="i-dot"></i> 2023-3-17</span>
+					</li>
+				</a>
+			</div>
+		</section>
+		<footer class="footer flex">
+			<div class="about-info">
+			  <a href="https://huaban.com/user/liujueyi" target="_blank">花瓣</a>
+			  <a href="https://blog.csdn.net/justliu1989" target="_blank">CSDN</a>
+			  <a href="https://t.me/designer_work_share" target="_blank">电报频道</a>
+			  <a href="https://weibo.com/u/1849041452" target="_blank">微博</a>
+				<a href="javascript:;" class="footer-gzh">公众号
+				<aside class="gzh-pop">
+					<img class="gzhimg" src="https://funcss.liujueyi.cn/img/wxgzh.png" alt="微信公众号">
+					<p class="gzhtext">微信公众号</p>
+				</aside>
+				</a>
+			</div>
+			<div class="site-beian">
+			  <span>设计师工作日常 © 2019</span>
+			  <a href="https://beian.miit.gov.cn" target="_blank">冀ICP备19017590号-1</a>
+			</div>
+		</footer>
   </div>
-	<script src="https://cdn.bootcdn.net/ajax/libs/vue/3.3.4/vue.global.js"></script>	
+	<script src="https://cdn.bootcdn.net/ajax/libs/vue/3.3.4/vue.global.js"></script>
 	<script src="https://cdn.bootcdn.net/ajax/libs/axios/1.3.6/axios.min.js"></script>
 	<script src="app.js"></script>
 	<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
@@ -98,13 +123,6 @@
 			var s = document.getElementsByTagName("script")[0]; 
 			s.parentNode.insertBefore(hm, s);
 		})();
-		// 横屏滚动
-		var containerWheel = document.querySelector(".index-content");
-		containerWheel.addEventListener("wheel", (event) => {
-		  event.preventDefault();
-		  containerWheel.scrollLeft += event.deltaY;
-		});
 	</script>
-
 </body>
 </html>
