--- a/test.html
+++ b/test.html
@@ -21,11 +21,9 @@
 				<span class="logo-name">设计师工作日常</span>
 			</aside>
 			<nav>
-				<a class="nav-a" href="index.html">首页</a>
-				<a class="nav-a" href="design.html">设计</a>
+				<a class="nav-a" href="index.html">设计</a>
 				<a class="nav-a" href="dev.html">前端</a>
 				<a class="nav-a" href="test.html">实验</a>
-				<a class="nav-a" href="about.html">关于</a>
 			</nav>
 		</header>
 		<section class="blue-box" style="padding-bottom: 6.25rem">
