--- a/play/vipvideo/vipvideo.html
+++ b/play/vipvideo/vipvideo.html
@@ -22,16 +22,16 @@
 					<span class="logo-name">设计师工作日常</span>
 				</aside>
 				<nav>
-					<a class="nav-a" href="index.html">设计</a>
-					<a class="nav-a" href="dev.html">前端</a>
-					<a class="nav-a" href="test.html">实验</a>
+					<a class="nav-a" href="../../index.html">设计</a>
+					<a class="nav-a" href="../../dev.html">前端</a>
+					<a class="nav-a" href="../../test.html">实验</a>
 				</nav>
 			</header>
 			
-      <section class="blue-box" style="padding-bottom: 6.25rem">
+      <section class="blue-box-vip" style="padding-bottom: 6.25rem">
 				<div class="analysis-title flex">
 					<div class="lab-title">视频解析</div>
-					<div class="lab-item-info">接口源于互联网，仅供学习娱乐交流，勿用于商业，后果自负！</div>
+					<div class="lab-item-info lh1-5">接口源于互联网，仅供学习娱乐交流，勿用于商业，后果自负！</div>
 				</div>
 				<div class="vip-box">
 					<div class="inp-box flex">
