--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.loli.net/css2?family=Noto+Serif+SC:wght@400;700;900&display=swap"" rel="stylesheet">
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/style.css">
-	<!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7227292961308738" crossorigin="anonymous"></script> -->
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7227292961308738" crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="app">
