--- a/play/vipvideo/vipvideo.html
+++ b/play/vipvideo/vipvideo.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="../../css/common.css">
 		<link rel="stylesheet" href="../../css/style.css">
 		<link rel="stylesheet" href="files/vipvideo.css">
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7227292961308738" crossorigin="anonymous"></script>
 	</head>
   <body>
     <div class="container">
