--- a/dev.html
+++ b/dev.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-NTHM47ZD');</script>
+	<!-- End Google Tag Manager -->
   <meta charset="UTF-8">
 	<meta name="keywords" content="设计师工作日常,UI设计师,funcss,whtool,摸鱼,小游戏,2048,Just Liu,UI,css3,css,html,vue,js,前端,设计,vue">
 	<meta name="description" content="这里是设计师工作日常，我是Just. Liu，这是我的个人网站，欢迎光临">
@@ -114,4 +121,8 @@
 		})();
 	</script>
 </body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NTHM47ZD"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 </html>
