--- a/play/vipvideo/vipvideo.html
+++ b/play/vipvideo/vipvideo.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<!-- Google Tag Manager -->
-		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-		})(window,document,'script','dataLayer','GTM-NTHM47ZD');</script>
-		<!-- End Google Tag Manager -->
 		<meta charset="utf-8">
 		<meta name="keywords" content="vip视频观看,视频解析,摸鱼,设计师工作日常">
 		<meta name="description" content="vip视频解析在线观看">
@@ -20,6 +13,15 @@
 		<link rel="stylesheet" href="../../css/style.css">
 		<link rel="stylesheet" href="files/vipvideo.css">
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7227292961308738" crossorigin="anonymous"></script>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-X99HN84D35"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		
+		  gtag('config', 'G-X99HN84D35');
+		</script>
 	</head>
   <body>
     <div class="container">
@@ -103,8 +105,4 @@
 			})();
 		</script>
   </body>
-	<!-- Google Tag Manager (noscript) -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NTHM47ZD"
-	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-	<!-- End Google Tag Manager (noscript) -->
 </html>
