--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="keywords" content="设计师工作日常,UI设计师,funcss,whtool,摸鱼,小游戏,2048,Just Liu,UI,css3,css,html,vue,js,前端,设计,vue">
 	<meta name="description" content="这里是设计师工作日常，我是Just. Liu，这是我的个人网站，欢迎光临">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="baidu-site-verification" content="codeva-tCzeKc5lYd" />
+	<meta name="baidu-site-verification" content="codeva-CSRHBIT33N" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 	<title>设计师工作日常 - Just. Liu的个人网站</title>
 	<link href="https://fonts.loli.net/css2?family=Noto+Sans+SC:wght@400;700;900&display=swap"" rel="stylesheet">
