--- a/play/vipvideo/vipvideo.html
+++ b/play/vipvideo/vipvideo.html
@@ -5,6 +5,7 @@
 		<meta name="keywords" content="vip视频观看,视频解析,摸鱼,设计师工作日常">
 		<meta name="description" content="vip视频解析在线观看">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+		<meta name="baidu-site-verification" content="codeva-CSRHBIT33N" />
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 		<title>vip视频解析</title>
 		<link href="https://fonts.loli.net/css2?family=Noto+Sans+SC:wght@400;700;900&display=swap"" rel="stylesheet">
