--- a/test.html
+++ b/test.html
@@ -12,16 +12,6 @@
 	<link href="https://fonts.loli.net/css2?family=Noto+Serif+SC:wght@400;700;900&display=swap"" rel="stylesheet">
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/style.css">
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7227292961308738" crossorigin="anonymous"></script>
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-X99HN84D35"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-	
-	  gtag('config', 'G-X99HN84D35');
-	</script>
 </head>
 <body>
   <div id="app">
@@ -117,8 +107,8 @@
 			</div>
 		</footer>
   </div>
-	<script src="https://cdn.bootcdn.net/ajax/libs/vue/3.3.4/vue.global.js"></script>
-	<script src="https://cdn.bootcdn.net/ajax/libs/axios/1.3.6/axios.min.js"></script>
+	<script src="https://funcss.liujueyi.cn/vue3.2.22/vue.global.min.js"></script>
+	<script src="https://funcss.liujueyi.cn/axios1.3.6/axios.min.js"></script>
 	<script src="app.js"></script>
 	<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 	<script>
