--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<a class="nav-a" href="test.html">实验</a>
 			</nav>
 		</header>
-		<section class="blue-box" style="padding-bottom: 6.25rem">
+		<!-- <section class="blue-box" style="padding-bottom: 6.25rem">
 			<div class="test-banner flex">
 				<div class="banner-left-box flex">
 					<div class="design-animation-01"></div>
@@ -41,7 +41,7 @@
 					</ul>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<section class="red-box" style="padding-bottom: 6.25rem">
 			<div class="web-pro-title flex">
 				<ul class="flex">
