--- a/test.html
+++ b/test.html
@@ -27,7 +27,7 @@
 				<a class="nav-a" href="test.html">实验</a>
 			</nav>
 		</header>
-		<section class="blue-box" style="padding-bottom: 6.25rem">
+		<!-- <section class="blue-box" style="padding-bottom: 6.25rem">
 			<div class="test-banner flex">
 				<div class="cube-box52">
 					<div class="cube52">
@@ -52,7 +52,7 @@
 					</ul>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<section class="red-box" style="padding-bottom: 6.25rem">
 			<div class="web-pro-title flex">
 				<ul class="flex">
