--- a/test.html
+++ b/test.html
@@ -92,7 +92,7 @@
 			<div class="about-info">
 			  <a href="https://huaban.com/user/liujueyi" target="_blank">花瓣</a>
 			  <a href="https://blog.csdn.net/justliu1989" target="_blank">CSDN</a>
-			  <a href="https://t.me/designer_work_share" target="_blank">电报频道</a>
+			  <a href="https://t.me/designer_work_time" target="_blank">电报群</a>
 			  <a href="https://weibo.com/u/1849041452" target="_blank">微博</a>
 				<a href="javascript:;" class="footer-gzh">公众号
 				<aside class="gzh-pop">
