--- a/share/share-1-1.html
+++ b/share/share-1-1.html
@@ -49,8 +49,8 @@
 						好用的机场推荐（本博主力荐）- 博主已使用一年
 					</div>
 					<div class="share-name-info flex">
-						<span style="margin-right: 2rem;">Just. Liu</span>
-						<span>2024年12月31日 15:02</span>
+						<span style="margin-right: 2rem;">🧑‍💻 Just. Liu</span>
+						<span>⏳️ 2024年12月31日 15:02</span>
 					</div>
 				</div>
 				<div class="share-item flex f14" style="margin-top: 1.5rem">
@@ -58,26 +58,26 @@
 					<p>免费的就不推荐了，网络拥堵、卡而且频繁掉线，经常连不上转圈圈。</p>
 					<p class="share-p-title">严重警示</p>
 					<p>小伙伴们不要以为出去了就无所顾忌了，一定不要发表作纟的言论，不要传播相关的违规违法信息！！！</p>
-					<p class="p-center"><img src="https://raw.githubusercontent.com/jy121314/just-imgs/main/picgoimg/20241231154637977.webp" alt="我有一颗中国心"  /></p>
+					<p class="p-center"><img src="https://cdnimg.liujueyi.cn/picgoimg/20241231154637977.webp" alt="我有一颗中国心"  /></p>
 					<p class="share-p-title">福利资源</p>
 					<p>众所周知付费机场较比与其它的免费机场更安全，而此机场更赠送一个影视媒体库，热门高清影片免费看，且无广告。</p>
 					<p>只需要在你电脑或者手机上安装一个影视客户端，然后添加此机场服务就可以畅爽观看了。所以这个机场特别适合那些喜欢看剧、追剧的小伙伴们！</p>
-					<p class="p-center"><img src="https://raw.githubusercontent.com/jy121314/just-imgs/main/picgoimg/20241231154637975.webp" alt="高清影视资源"  /></p>
+					<p class="p-center"><img src="https://cdnimg.liujueyi.cn/picgoimg/20241231154637975.webp" alt="高清影视资源"  /></p>
 					<p>冷门节点、专线节点、GPT解锁。</p>
 					<p>双旦优惠活动：8折优惠码（<span class="t-info-c t-bold">20%off</span>）。活动有效期：2024/12/23 - 2025/01/03</p>
 					<p class="share-p-title">套餐资费</p>
 					<p>最低的冲浪套餐为 ¥15/月，流量有88G，观影有0.2x倍率。对于本人来说是太多了，根本用不完。</p>
-					<p class="p-center"><img src="https://raw.githubusercontent.com/jy121314/just-imgs/main/picgoimg/20241231154637976.webp" alt="月余流量"  /></p>
+					<p class="p-center"><img src="https://cdnimg.liujueyi.cn/picgoimg/20241231154637976.webp" alt="月余流量"  /></p>
 					<p>这是我本月的使用情况，下载了好几部蓝光电影后，还剩这么多。</p>
 					<p>小伙伴们可以根据自己的需求，订阅适合自己的套餐，以下是不同的套餐截图。</p>
-					<p class="p-center"><img src="https://raw.githubusercontent.com/jy121314/just-imgs/main/picgoimg/20241231154637974.webp" alt="套餐"  /></p>
+					<p class="p-center"><img src="https://cdnimg.liujueyi.cn/picgoimg/20241231154637974.webp" alt="套餐"  /></p>
 					<p><span class="t-info-c t-bold">温馨提醒：</span>订阅的话，建议一次不要订阅太长时间，万一跑路了... 每次订阅一个月吧，防止它跑路。</p>
 					<p class="share-p-title">使用教程</p>
-					<p>注册成功后，可以阅读里面的使用教程来学习使用，相信对聪明的小伙伴们来说，都很简单。如果有不懂的，可以公众号问我，或者+v、tg群里问我。</p>
+					<p>注册成功后，可以阅读里面的使用教程来学习使用，相信对聪明的小伙伴们来说，都很简单。如果有不懂的，可以公众号问我，或者 +v（ljue01）、<a href="https://t.me/designer_work_time" target="_blank">tg群</a>里问我。</p>
 					<p class="share-p-title">入口地址</p>
 					<p>想尝试的小伙伴请：<a href="https://u.xn--hwqp2zit2amna.com/auth/register?code=gqnnYqec" target="_blank">[点击进入] </a>。</p>
 					<p>40+的节点，一年使用过程中好像没有掉线的情况发生，博主个人觉得这点很nice的。</p>
-					<p class="p-center"><img src="https://raw.githubusercontent.com/jy121314/just-imgs/main/picgoimg/20241231162020293.webp" alt="节点"  /></p>
+					<p class="p-center"><img src="https://cdnimg.liujueyi.cn/picgoimg/20241231162020293.webp" alt="节点"  /></p>
 					<p>有任何问题欢迎关注公众号：设计师工作日常，私信留言。</p>
 					<p class="p-center"><img src="https://whtool.liujueyi.cn/img/wxgzh.png" alt="设计师工作日常" /></p>
 					<p class="p-center" style="font-size: 12px;">公众号：设计师工作日常</p>
@@ -88,7 +88,7 @@
 			<div class="about-info">
 			  <a href="https://huaban.com/user/liujueyi" target="_blank">花瓣</a>
 			  <a href="https://blog.csdn.net/justliu1989" target="_blank">CSDN</a>
-			  <a href="https://t.me/designer_work_share" target="_blank">电报频道</a>
+			  <a href="https://t.me/designer_work_time" target="_blank">电报群</a>
 			  <a href="https://weibo.com/u/1849041452" target="_blank">微博</a>
 				<a href="javascript:;" class="footer-gzh">公众号
 				<aside class="gzh-pop">
