--- a/share/share-1-1.html
+++ b/share/share-1-1.html
@@ -46,7 +46,7 @@
 			<div class="share-box flex">
 				<div class="share-item flex">
 					<div class="share-title lh1-5">
-						好用的机场推荐（本博主力荐）- 博主已使用一年
+						好用的机场推荐（本人力荐）- 已使用一年
 					</div>
 					<div class="share-name-info flex">
 						<span style="margin-right: 2rem;">🧑‍💻 Just. Liu</span>
@@ -65,6 +65,7 @@
 					<p class="p-center"><img src="https://cdnimg.liujueyi.cn/picgoimg/20241231154637975.webp" alt="高清影视资源"  /></p>
 					<p>冷门节点、专线节点、GPT解锁。</p>
 					<p>双旦优惠活动：8折优惠码（<span class="t-info-c t-bold">20%off</span>）。活动有效期：2024/12/23 - 2025/01/03</p>
+					<p>最新的优惠码可以公众号私信问我，或者你注册登录后，注意看最上方的机场通知，那里会有最新的优惠活动。</p>
 					<p class="share-p-title">套餐资费</p>
 					<p>最低的冲浪套餐为 ¥15/月，流量有88G，观影有0.2x倍率。对于本人来说是太多了，根本用不完。</p>
 					<p class="p-center"><img src="https://cdnimg.liujueyi.cn/picgoimg/20241231154637976.webp" alt="月余流量"  /></p>
